Шекула Ярослав - 11.4-Добавив співрозробників

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<!--   14  Автор    -->
 				<h3>Керівник проекту Римар Віктор </h3>
 				<h3>Співрозробники: </h3>
-				<p style="color: red; font-size: 72; font-family: Monospace; font: Lucida Console">Шекула Ярослав, Філюк Влад</p>
+				<h3 style="color: red; font-family: Monospace; font: Lucida Console">Шекула Ярослав</h3>
 				<h4>Учасник проекту Васькевич Данило</h4>
 
 				<h4>Учасник проекту Філюк Влад</h4>
