--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<font size="5"color="navy"><h2>наші роботи</h2></font>
 			<font size="5">
 				<ul>
-					<li><a href="#">сайт будіівельної компанії</a></li>
+					<li><a href="https://www.chess.com/uk">сайт будіівельної компанії</a></li>
 					<li><a href="#">сайт ТМ "Новашкола"</a></li>
 					<li><a href="#"></a>Редизайн сайту classno.com.ua</li>
 					<li><a href="#"></a>Розробка CMS для Metro Cash&Carry</li>
